# id-changer

./: .envrc  .gitignore  Cargo.toml  LICENSE.md  Tauri.toml  flake.nix  index.html  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  stylelint.config.mjs  tsconfig.base.json  tsconfig.json  tsconfig.site.json  tsconfig.tool.json  vite.config.ts
.github/actions/build-linux/: action.yml
.github/actions/build-linux-appimage/: action.yml
.github/actions/build-linux-archlinux/: Dockerfile  action.yml  entrypoint.sh
.github/actions/build-linux-deb/: action.yml
.github/actions/build-linux-rpm/: action.yml
.github/actions/build-linux-tgz/: action.yml
.github/actions/build-macos/: action.yml
.github/actions/build-windows/: action.yml
.github/actions/check-pkgbuild/: Dockerfile  action.yml  entrypoint.sh
.github/actions/generate-srcinfo/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: build.yml  release.yml  sync-pkgbuild.yml
app/: boards.json  boards.schema.json  client.ts  global.d.ts  server.ts  style.css
app/lib/: boards.ts
app/routes/: _404.tsx  _error.tsx  _renderer.tsx  index.tsx
nix/: git-hooks.nix  package.nix  treefmt.nix
patches/: honox.patch
src/: app.tsx  boards.d.json.ts  boards.json  boards.schema.json  main.tsx  style.css
src-tauri/: Cargo.toml  Tauri.toml
src-tauri/bundle/archlinux/: .SRCINFO  PKGBUILD  makepkg.conf
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
